--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+       <link href="style.css" rel="stylesheet">
+       <title>My Site Title</title>
+    </head>
+    <body>
+
+    </body>
+
+</html>
